# ccsv

./: .gitignore  CMakeLists.txt
CCSV/: ccsv.c  main.c
CCSV.xcodeproj/: project.pbxproj
CCSV.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CCSV.xcodeproj/xcuserdata/mihaicostea.xcuserdatad/xcschemes/: xcschememanagement.plist
include/ccsv/: ccsv.h  win_string.h
src/: ccsv_config.h.in
src/ccsv/: ccsv.c  win_string.c
src/test/: main.c
src/test/res/: csv_test_file.csv
